--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Although the indigenous peoples' right to their land was acknowledged by these p
 	</span>
 
 	<p class="intro">The Tumandok and Ati people both reside in Panay Islands. Tumandoks are the only indigenous group to traditionally speak a Visayan language, while the Atis speak a language called Inati.</p>
-	<a id="alink" href="../htdocs/Content page 1.html">To Continue Reading, Click Here!</a>
+	<a id="alink" href="htdocs/Content page 1.html">To Continue Reading, Click Here!</a>
 </div>
 </section>
 
